--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,36 @@
+#content {
+    max-width: 1600px;
+    margin: 0 auto;
+}
+
 body {
     margin: 0;
+}
+header {
+    display: grid;
+    grid-template-columns: 150px auto;
+    background-color: #E65B53;
+    color: white;
+    text-align: center;
+    font-family: idk;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 
 .logo-img {
     width: 150px;
     border-radius: 50%;
+}
+nav img {
+    padding: 10px;
+}
+nav a {
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    padding: 50px;
 }
 
 .hero-div {
