--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,7 @@ header {
     text-align: center;
     font-family: idk;
 }
-nav {
+#header-nav {
     display: flex;
     justify-content: space-around;
 }
@@ -23,14 +23,19 @@ nav {
     width: 150px;
     border-radius: 50%;
 }
-nav img {
+#header-nav img {
     padding: 10px;
 }
-nav a {
+#header-nav a {
     text-align: center;
+    font-size: 1.5em;
     color: white;
     text-decoration: none;
     padding: 50px;
+}
+#header-nav a:hover {
+    background-color: #65A67F;
+    color: white;
 }
 
 .hero-div {
@@ -38,32 +43,105 @@ nav a {
 }
 
 #home-hero-img {
-    
+    width: 100%;
 }
 
 #home-grid {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(10, 10%);
 }
 
 #charcuterie-board {
-    grid-column: 1/4;
+    grid-column: 1/7;
+    padding: 175px 30px 175px 175px;
 }
 
 #description-text {
-    grid-column: 4/6;
+    grid-column: 7/11;
+    grid-row: 1;
+    font-size: 2em;
+    text-align: center;
+    justify-content: center;
+    align-content: center;
+    padding: 100px 175px 100px 0px;
 }
 
 #countdown {
-    grid-column: 1/3;
+    grid-column: 2/6;
+    background-color: #65A67F;
+    padding: 30px;
+    text-align: center;
+    align-content: center;
+    color: #070D4E;
+    border:solid #070D4E .5em;
+    font-size: 3em;
+    margin-top: 80px;
 }
 
 #counter-text {
-    grid-column: 1/3
+    grid-column: 2/6;
+    font-size: 2em;
+    text-align: center;
 }
 
 #home-tree {
-    grid-column: 3/6;
+    width: 500px;
+    grid-column: 7/9;
+    grid-row: 2/4;
+    display: inline;
+}
+
+footer {
+    background-color: #E65B53;
+    align-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 1.5em;
+    color: white;
+    text-decoration: none;
+}
+#footer-nav {
+    display: grid;
+    grid-template-columns: repeat(8, 12.5%);
+    grid-template-rows: 1fr 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+}
+footer a {
+    padding: 10px;
+    background-color:#65A67F;
+    color: white;
+    text-decoration: none;
+    grid-row: 2;
+
+}
+footer a:hover {
+    background-color: transparent;
+    color: #070D4E;
+}
+#index-link {
+    background-color: transparent;
+    grid-column: 1/3;
+    grid-row: 1;
+}
+#traditions-link {
+    background-color: transparent;
+    grid-column: 1/3;
+    grid-row: 2;
+}
+#movie-link {
+    background-color: transparent;
+    grid-column: 1/3;
+    grid-row: 3;
+}
+footer p {
+    grid-column: 3/7;
+    grid-row: 2;
+}
+footer img {
+    padding: 10px;
+    grid-column: 8/11;
+    grid-row: 1/4;
 }
 
 #movie-hero-img {
