Changed color on site plan button

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -109,7 +109,7 @@ footer {
 }
 footer a {
     padding: 10px;
-    background-color:#65A67F;
+    background-color:#070D4E;
     color: white;
     text-decoration: none;
     grid-row: 2;
