--- a/styles/styles.css
+++ b/styles/styles.css
@@ -84,12 +84,20 @@ header {
     text-align: center;
 }
 
-#home-tree {
+.home-tree {
     width: 500px;
     grid-column: 7/9;
     grid-row: 2/4;
     display: inline;
     padding: 20px;
+}
+
+.overlay {
+    position: absolute;
+    background-color: #070D4E;
+}
+.home-tree:hover .overlay{
+    opacity: 1;
 }
 
 footer {
