--- a/styles/styles.css
+++ b/styles/styles.css
@@ -88,16 +88,42 @@ header {
     width: 500px;
     grid-column: 7/9;
     grid-row: 2/4;
-    display: inline;
+    display: block;
     padding: 20px;
 }
 
 .overlay {
     position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 710px;
+    width: 460px;
+    opacity: 0;
+    transition: .5s ease;
     background-color: #070D4E;
+    padding: 20px;
+    margin: 20px;
+    align-content: center;
 }
-.home-tree:hover .overlay{
+
+.overlay-container {
+    position: relative;
+    align-content: center;
+    grid-column: 7/9;
+    grid-row: 2/4;
+}
+.overlay-container:hover .overlay {
     opacity: 1;
+    align-content: center;
+}
+
+#overlay-text {
+    color: white;
+    font-size: 3em;
+    text-align: center;
+    
 }
 
 footer {
