--- a/styles/styles.css
+++ b/styles/styles.css
@@ -194,18 +194,22 @@ footer img {
 
 #movie-hero-img {
     width: 100%;
-
 }
 
 #movie-grid {
     display: grid;
     grid-template-columns: 33% 67%;
     grid-template-rows: repeat(6, 1fr);
+    padding: 20px;
 }
 
 #movie-grid h2 {
     text-align: center;
 }
+#movie-grid p {
+    font-size: 1.3em;
+}
+
 .movie-images {
     width: 200px;
     grid-column: 1/2;
