--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,9 @@ h2 {
     color:#070D4E;
     font-family: "Lilita One";
 }
+p {
+    font-family: "Cormorant Garamond";
+}
 header {
     display: grid;
     grid-template-columns: 150px auto;
@@ -304,11 +307,18 @@ footer img {
 .traditions-grid img {
     height: 300px;
 }
+.traditions-grid p {
+    padding: 20px;
+    border: #65A67F solid 10px;
+    margin: 20px;
+    text-align: center;
+    font-size: 1.5em;
+}
 #christmas-lights-title {
-    grid-row: 1;
+    grid-row: 5;
 }
 .christmas-lights-items {
-    grid-row: 2;
+    grid-row: 6;
 }
 #christmas-lights-p {
     grid-column: 1/3;
@@ -317,10 +327,10 @@ footer img {
     grid-column: 3/6;
 }
 #cookies-title {
-    grid-row: 3;
+    grid-row: 1;
 }
 .cookies-items {
-    grid-row: 4;
+    grid-row: 2;
 }
 #cookies-p {
     grid-column: 1/4;
@@ -329,10 +339,10 @@ footer img {
     grid-column: 4/6
 }
 #tree-decorating-title {
-    grid-row: 5;
+    grid-row: 3;
 }
 .tree-decorating-items {
-    grid-row: 6;
+    grid-row: 4;
 }
 #tree-decorating {
     grid-column: 1/3;
