--- a/styles/styles.css
+++ b/styles/styles.css
@@ -296,7 +296,7 @@ footer img {
 .traditions-grid {
     display: grid;
     grid-template-columns: repeat(5, 20%);
-    grid-template-rows: repeat(5% 15% 5% 15% 5% 15% 5% 15% 5% 15%);
+    grid-template-rows: 5% 15% 5% 15% 5% 15% 5% 15% 5% 15%;
     justify-items: center;
     align-items: center;
     margin: 0px;
